--- a/src/html/page030.html
+++ b/src/html/page030.html
@@ -99,7 +99,7 @@
 
           <!-- 模組塊：問卷結果頁面模板 -->
           <div class="module-card card border-0 shadow-sm">
-            <div class="card-body">
+            <div class="card-body bg-white">
 
               <div class="d-flex justify-content-between align-items-center mb-3">
                 <h3 class="h5 mb-0 fw-bold text-orange">問卷結果頁面模板</h3>
