--- a/src/html/page023.html
+++ b/src/html/page023.html
@@ -119,166 +119,127 @@
           <div class="module-card card border-0 mt-2">
             <div class="card-body px-0">
 
-              <!-- 標題 + 新增 -->
-              <div class="d-flex justify-content-between align-items-center px-3 py-3 mb-2 border-bottom">
-                <h3 class="h5 fw-bold text-orange mb-0">名單列表</h3>
-                <a href="page023.html" class="btn btn-orange d-inline-flex align-items-center gap-1">
-                  <i class="bi bi-plus-lg"></i> 新增名單
-                </a>
-              </div>
+<!-- 名單建立：整塊白底 -->
+<section class="list-create module-white">
+  <!-- 標題：字級/顏色與 page022「名單列表」一致 -->
+  <div class="h5 fw-bold text-orange mb-3">新增名單</div>
 
-              <div class="table-responsive">
-                <table class="table align-middle gs-table list-table mb-0">
-                  <thead>
-                    <tr>
-                      <th class="w-name">名單名稱</th>
-                      <th class="w-qty">總數量</th>
-                      <th class="w-qty">有效數量</th>
-                      <th class="w-wide">失效數量</th>
-                      <th class="w-wide">編碼類型</th>
-                      <th class="w-wide">已產生連結</th>
-                      <th class="w-wide">渠道</th>
-                      <th class="w-state">狀態</th>
-                      <th class="w-updated">最後編輯</th>
-                      <th class="w-actions">操作</th>
-                    </tr>
-                  </thead>
-                  <tbody>
+  <!-- A. 資料來源列（同一行 + 灰底） -->
+  <div class="bar-row bar-row-top">
+    <!-- A1. SAS 名單（下拉 + +按鈕） -->
+    <div class="bar-item bar-sas d-flex align-items-center">
+      <div class="form-check me-3">
+        <input class="form-check-input" type="radio" name="srcType" id="srcSas" aria-controls="sasSelect btnAddPkg">
+        <label class="form-check-label fw-semibold" for="srcSas">選擇 SAS 名單</label>
+      </div>
 
-                    <!-- row #1 -->
-                    <tr>
-                      <td class="text-deep-blue fw-semibold">主會員名單</td>
-                      <td>10,000</td>
-                      <td>9,500</td>
-                      <td class="text-muted">黑名單：500</td>
-                      <td>
-                        <span class="pill pill-outline">系統</span>
-                      </td>
-                      <td class="col-generated">
-                        <span class="fw-semibold text-deep-blue js-link-count">9,500</span>
-                      </td>
-                      <!-- 渠道（顯示 pill + ＋ 按鈕。按鈕會開新視窗） -->
-                      <td class="col-channels ps-2">
-                        <a href="page024.html" class="btn btn-round-sm ms-0 me-2 js-open-links" title="新增渠道">
-                          <i class="bi bi-plus-lg"></i>
-                        </a>
-                        <!-- <span class="badge badge-chip">Line</span>
-                        <span class="badge badge-chip ms-1">App Push</span> -->
-                      </td>
-                      <td><span class="badge badge-state bg-info text-white">已完成</span></td>
-                      <td class="text-muted">
-                        <div>2024-01-20 14:30</div>
-                        <div>王小華</div>
-                      </td>
-                      <td class="ps-2">
-                        <div class="d-flex gap-2">
-                          <a href="page023.html" class="btn btn-icon" data-bs-toggle="tooltip" title="預覽"><i class="bi bi-eye"></i></a>
-                        </div>
-                      </td>
-                    </tr>
+      <div class="d-inline-flex align-items-center gap-2">
+        <select class="form-select form-select-sm w-auto" id="sasSelect" disabled>
+          <option value="" selected disabled>請選擇</option>
+          <option>名單包名稱01</option>
+          <option>名單包名稱02</option>
+          <option>名單包名稱03</option>
+          <option>名單包名稱04</option>
+          <option>名單包名稱05</option>
+          <option>名單包名稱06</option>
+          <option>名單包名稱07</option>
+        </select>
 
-                    <!-- row #2 -->
-                    <tr>
-                      <td class="text-deep-blue fw-semibold">主會員名單</td>
-                      <td>10,000</td>
-                      <td>9,500</td>
-                      <td class="text-muted">黑名單：500</td>
-                      <td>
-                        <span class="pill pill-outline">系統</span>
-                      </td>
-                      <td class="col-generated">
-                        <span class="fw-semibold text-deep-blue js-link-count">9,500</span>
-                      </td>
-                      <!-- 渠道（顯示 pill + ＋ 按鈕。按鈕會開新視窗） -->
-                      <td class="col-channels ps-2">
-                        <a href="page024.html" class="btn btn-round-sm ms-0 me-2 js-open-links" title="新增渠道">
-                          <i class="bi bi-plus-lg"></i>
-                        </a>
-                        <span class="badge badge-chip">Line</span>
-                        <span class="badge badge-chip ms-1">App Push</span>
-                      </td>
-                      <td><span class="badge badge-state bg-warning text-white">部分失敗</span></td>
-                      <td class="text-muted">
-                        <div>2024-01-20 14:30</div>
-                        <div>王小華</div>
-                      </td>
-                      <td class="ps-2">
-                        <div class="d-flex gap-2">
-                          <a href="page023.html" class="btn btn-icon" data-bs-toggle="tooltip" title="預覽"><i class="bi bi-pencil"></i></a>
-                        </div>
-                      </td>
-                    </tr>
+        <button type="button" class="btn btn-teal btn-sm" id="btnAddPkg" disabled>
+          <i class="bi bi-plus-lg me-1"></i>加入
+        </button>
+      </div>
+    </div>
 
-                    <!-- row #3 -->
-                    <tr>
-                      <td class="text-deep-blue fw-semibold">主會員名單</td>
-                      <td>10,000</td>
-                      <td>9,500</td>
-                      <td class="text-muted">黑名單：500</td>
-                      <td>
-                        <span class="pill pill-outline">系統</span>
-                      </td>
-                      <td class="col-generated">
-                        <span class="fw-semibold text-deep-blue js-link-count">9,500</span>
-                      </td>
-                      <!-- 渠道（顯示 pill + ＋ 按鈕。按鈕會開新視窗） -->
-                      <td class="col-channels ps-2">
-                        <a href="page024.html" class="btn btn-round-sm ms-0 me-2 js-open-links" title="新增渠道">
-                          <i class="bi bi-plus-lg"></i>
-                        </a>
-                        <span class="badge badge-chip">Line</span>
-                        <span class="badge badge-chip ms-1">App Push</span>
-                      </td>
-                      <td><span class="badge badge-state bg-success text-white">生成中</span></td>
-                      <td class="text-muted">
-                        <div>2024-01-20 14:30</div>
-                        <div>王小華</div>
-                      </td>
-                      <td class="ps-2">
-                        <div class="d-flex gap-2">
-                         <!--  <button class="btn btn-icon" data-bs-toggle="tooltip" title="預覽"><i class="bi bi-eye"></i></button>
-                          <button class="btn btn-icon" data-bs-toggle="tooltip" title="預覽"><i class="bi bi-eye"></i></button> -->
-                        </div>
-                      </td>
-                    </tr>
+    <!-- A2. 上傳名單（按鈕 + 說明文字） -->
+    <div class="bar-item">
+      <div class="form-check form-check-inline align-middle">
+        <input class="form-check-input" type="radio" name="srcType" id="srcUpload">
+        <label class="form-check-label" for="srcUpload">上傳名單</label>
+      </div>
+      <button type="button" class="btn btn-teal btn-sm ms-2 js-upload-file">
+        上傳檔案
+      </button>
+      <span class="text-muted small ms-3">支援 CSV、Excel（.xlsx/.xls）格式</br>檔案大小限制 10MB</span>
+    </div>
 
-                    <!-- row #4 -->
-                    <tr>
-                      <td class="text-deep-blue fw-semibold">主會員名單</td>
-                      <td>10,000</td>
-                      <td>9,500</td>
-                      <td class="text-muted">黑名單：500</td>
-                      <td>
-                        <span class="pill pill-outline">系統</span>
-                      </td>
-                      <td class="col-generated">
-                        <span class="fw-semibold text-deep-blue js-link-count">9,500</span>
-                      </td>
-                      <!-- 渠道（顯示 pill + ＋ 按鈕。按鈕會開新視窗） -->
-                      <td class="col-channels ps-2">
-                        <span class="badge badge-chip">實體</span>
-                      </td>
-                      <td><span class="badge badge-state bg-success text-white">生成中</span></td>
-                      <td class="text-muted">
-                        <div>2024-01-20 14:30</div>
-                        <div>王小華</div>
-                      </td>
-                      <td class="ps-2">
-                        <div class="d-flex gap-2">
-                          <a href="page023.html" class="btn btn-icon" data-bs-toggle="tooltip" title="預覽"><i class="bi bi-eye"></i></a>
-                          <button class="btn btn-icon" data-bs-toggle="tooltip" title="預覽"><i class="bi bi-download"></i></button>
-                        </div>
-                      </td>
-                    </tr>
+    <!-- A3. 實體街訪（同列） -->
+    <div class="bar-item">
+      <div class="form-check form-check-inline align-middle">
+        <input class="form-check-input" type="radio" name="srcType" id="srcField">
+        <label class="form-check-label" for="srcField">實體街訪</label>
+      </div>
+      <input type="number" min="0" class="form-control form-control-sm w-auto ms-2" placeholder="請輸入數量">
+    </div>
+  </div>
 
-                  </tbody>
-                </table>
-              </div>
+  <!-- A* 下方：名單包清單（灰底、每列最多 4 個） -->
+  <div class="pkg-wrap d-none">
+    <div class="pkg-grid" id="pkgGrid">
+      <!-- JS 會插入 .pkg-chip -->
+    </div>
+  </div>
+
+  <!-- B. 編碼類型（置於狀態列上方） -->
+  <div class="encode-block mt-4">
+    <div class="d-flex align-items-center justify-content-between flex-wrap gap-3">
+      <div class="flex-grow-1">
+        <div class="section-caption">編碼類型</div>
+        <div class="d-flex align-items-center gap-5 my-3">
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="encType" id="encSys">
+            <label class="form-check-label" for="encSys">系統編碼</label>
+          </div>
+          <div class="form-check d-flex align-items-center">
+            <input class="form-check-input" type="radio" name="encType" id="encClient" checked>
+            <label class="form-check-label mx-2" for="encClient">客戶編碼</label>
+            <button type="button" class="btn btn-teal btn-sm js-upload-batch">上傳檔案</button>
+            <span class="text-muted small ms-3">支援分批上傳，CSV 格式</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- C. 狀態／紀錄／編輯者（同一行 + 灰底；*預設隱藏*，上傳後顯示） -->
+  <div class="bar-row d-none" id="statusRow">
+    <!-- 編碼狀態 -->
+    <div class="bar-item grow col-stack">
+      <div class="section-caption">編碼狀態</div>
+      <div class="stat-group">
+        <div class="stat-card">總名單數：100,000</div>
+        <div class="stat-card">總名單數：20,000</div>
+        <div class="stat-card">剩餘名單：80,000</div>
+      </div>
+    </div>
+
+    <!-- 上傳紀錄 -->
+    <div class="bar-item grow col-stack">
+      <div class="section-caption">上傳紀錄</div>
+      <div class="stat-group">
+        <div class="stat-card">上傳 20,000 筆</div>
+      </div>
+    </div>
+
+    <!-- 編輯者 -->
+    <div class="bar-item grow col-stack">
+      <div class="section-caption">編輯者</div>
+      <div class="stat-group">
+        <div class="stat-card">2024-01-20 14:30 by 王小華</div>
+      </div>
+    </div>
+  </div>
+
+</section>
+
 
               <!-- 底部動作 -->
               <div class="d-flex justify-content-between align-items-center px-0 mt-4">
-                <a href="page021.html" class="btn btn-deep-blue px-4">回上一步</a>
-                <a href="page020.html" class="btn-deep-blue px-4">完成名單設定</a>
+                <a href="page022.html" class="btn btn-deep-blue px-4">回名單列表</a>
+                <div class="d-flex align-items-center">
+                  <a href="page022.html" class="btn btn-secondary px-4 me-3">取消</a>
+                  <a href="page022.html" class="btn-deep-blue px-4">建立</a>
+                </div>
               </div>
             </div>
           </div>
