--- a/src/html/page040.html
+++ b/src/html/page040.html
@@ -162,13 +162,13 @@
 
                           <!-- 操作（僅樣式佔位，可接事件） -->
                           <div class="d-flex align-items-center gap-2">
-                            <button class="btn btn-icon btn-square btn-pause js-toggle-run"
+                            <button class="btn  btn-pause js-toggle-run"
                                     type="button" aria-pressed="false"
                                     data-bs-toggle="tooltip" title="暫停">
                               <i class="bi bi-pause"></i>
                             </button>
 
-                            <button class="btn btn-icon btn-square btn-stop"
+                            <button class="btn  btn-stop"
                                     type="button" data-bs-toggle="tooltip" title="停止">
                               <i class="bi bi-stop"></i>
                             </button>
@@ -268,7 +268,7 @@
                                     <div class="d-inline-flex align-items-center gap-2">
                                       <!-- 設定 -->
                                       <button type="button"
-                                              class="btn btn-icon btn-square btn-gear js-l3-settings"
+                                              class="btn  btn-gear js-l3-settings"
                                               data-bs-toggle="tooltip" title="設定">
                                         <i class="bi bi-gear"></i>
                                       </button>
@@ -302,14 +302,14 @@
                                     <div class="d-inline-flex align-items-center gap-2">
                                       <!-- 設定 -->
                                       <button type="button"
-                                              class="btn btn-icon btn-square btn-gear js-l3-settings"
+                                              class="btn  btn-gear js-l3-settings"
                                               data-bs-toggle="tooltip" title="設定">
                                         <i class="bi bi-gear"></i>
                                       </button>
 
                                       <!-- 暫停 ↔ 恢復 -->
                                       <button type="button"
-                                              class="btn btn-icon btn-square btn-pause js-l3-toggle"
+                                              class="btn  btn-pause js-l3-toggle"
                                               aria-pressed="false"
                                               data-bs-toggle="tooltip" title="暫停">
                                         <i class="bi bi-pause"></i>
@@ -317,7 +317,7 @@
 
                                       <!-- 停止 -->
                                       <button type="button"
-                                              class="btn btn-icon btn-square btn-stop"
+                                              class="btn  btn-stop"
                                               data-bs-toggle="tooltip" title="停止">
                                         <i class="bi bi-stop"></i>
                                       </button>
@@ -376,14 +376,14 @@
                                     <div class="d-inline-flex align-items-center gap-2">
                                       <!-- 設定 -->
                                       <button type="button"
-                                              class="btn btn-icon btn-square btn-gear js-l3-settings"
+                                              class="btn  btn-gear js-l3-settings"
                                               data-bs-toggle="tooltip" title="設定">
                                         <i class="bi bi-gear"></i>
                                       </button>
 
                                       <!-- 暫停 ↔ 恢復 -->
                                       <button type="button"
-                                              class="btn btn-icon btn-square btn-pause js-l3-toggle"
+                                              class="btn  btn-pause js-l3-toggle"
                                               aria-pressed="false"
                                               data-bs-toggle="tooltip" title="暫停">
                                         <i class="bi bi-pause"></i>
@@ -391,7 +391,7 @@
 
                                       <!-- 停止 -->
                                       <button type="button"
-                                              class="btn btn-icon btn-square btn-stop"
+                                              class="btn  btn-stop"
                                               data-bs-toggle="tooltip" title="停止">
                                         <i class="bi bi-stop"></i>
                                       </button>
@@ -459,14 +459,14 @@
                                   <div class="col-actions text-start">
                                     <!-- 設定 -->
                                     <button type="button"
-                                            class="btn btn-icon btn-square btn-gear js-l3-settings"
+                                            class="btn  btn-gear js-l3-settings"
                                             data-bs-toggle="tooltip" title="設定">
                                       <i class="bi bi-gear"></i>
                                     </button>
 
                                     <!-- 停止 -->
                                     <button type="button"
-                                            class="btn btn-icon btn-square btn-stop"
+                                            class="btn  btn-stop"
                                             data-bs-toggle="tooltip" title="停止">
                                       <i class="bi bi-stop"></i>
                                     </button>
@@ -545,13 +545,13 @@
 
                           <!-- 操作（僅樣式佔位，可接事件） -->
                           <div class="d-flex align-items-center gap-2">
-                            <button class="btn btn-icon btn-square btn-pause js-toggle-run"
+                            <button class="btn  btn-pause js-toggle-run"
                                     type="button" aria-pressed="false"
                                     data-bs-toggle="tooltip" title="暫停">
                               <i class="bi bi-pause"></i>
                             </button>
 
-                            <button class="btn btn-icon btn-square btn-stop"
+                            <button class="btn  btn-stop"
                                     type="button" data-bs-toggle="tooltip" title="停止">
                               <i class="bi bi-stop"></i>
                             </button>
